--- a/make/Makefile.android
+++ b/make/Makefile.android
@@ -1,4 +1,29 @@
 #
+# Steps to compile for Android:
+#
+# 1) Download and extract the Android NDK from
+#    http://developer.android.com/sdk/ndk/index.html
+#    (e.g. into to /opt, otherwise call 'make NDK=')
+#
+# 2) Compile olsrd with the make command:
+#    make OS=android DEBUG=0 build_all
+#    (expect lots of warnings which is normal)
+#
+# 3) Install olsrd on your local PC, e.g.
+#    sudo make OS=android DEBUG=0 install_all
+#    which creates a /data directory on your PC.
+#
+# 4) Change /data/local/etc/olsrd.conf. You need
+#    to adapt the 'Interfaces' line, e.g. to use
+#    the eth0 on your android mobile. Also, the
+#    LoadPlugin lines needs adaption, e.g. you
+#    need "/data/local/lib/olsrd_txtinfo.so.0.1"
+#
+# 5) Copy all file from /data to your mobile, e.g.
+#    by pushing the files with the 'adb' tool.
+#
+
+#
 # LINUX SPECIFIC CONFIGURATION
 #
 
@@ -58,10 +83,7 @@ CFLAGS +=	-fPIC
 LDFLAGS +=	-fPIC
 endif
 
-# You need to download and extract the Android NDK from
-# http://developer.android.com/sdk/ndk/1.5_r1/index.html
-
-NDK = /usr/src/android-ndk-1.5_r1
+NDK = /opt/android-ndk-r4b
 NDK_ARCH = $(NDK)/build/platforms/android-3/arch-arm
 
 ifneq ($(shell uname -m),armv6l)
@@ -69,6 +91,9 @@ ifneq ($(shell uname -m),armv6l)
 CURRENT_SYSTEM = $(shell uname -s | tr A-Z a-z)
 CROSS_COMPILE = $(NDK)/build/prebuilt/$(CURRENT_SYSTEM)-x86/arm-eabi-4.2.1/bin/arm-eabi-
 CC = $(CROSS_COMPILE)gcc
+ifeq ($(DEBUG),0)
+STRIP = $(CROSS_COMPILE)strip
+endif
 endif
 
 CFLAGS += -I$(NDK_ARCH)/usr/include
@@ -76,7 +101,6 @@ CFLAGS += -I$(TOPDIR)/android
 
 LDFLAGS += -nostartfiles -nodefaultlibs -nostdlib -Bdynamic
 LDFLAGS += -Wl,--dynamic-linker -Wl,/system/bin/linker
-LDFLAGS += -Wl,--gc-sections -Wl,-z,nocopyreloc
 LDFLAGS += -L$(NDK_ARCH)/usr/lib
 LDFLAGS += -Wl,-rpath-link -Wl,$(NDK_ARCH)/usr/lib
 LDFLAGS += -llog
