Fix typo in compiler options

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -84,7 +84,7 @@ WARNINGS +=	-Wbad-function-cast
 WARNINGS +=	-Wpointer-arith
 WARNINGS +=	-Wcast-qual
 WARNINGS +=	-Wshadow
-WARNINGS +=	-Wformat-2
+WARNINGS +=	-Wformat
 WARNINGS +=	-Wsequence-point
 WARNINGS +=	-Wpointer-arith
 WARNINGS +=	-Wcast-align
