--- a/lib/dyn_gw/Makefile
+++ b/lib/dyn_gw/Makefile
@@ -54,5 +54,8 @@ install:	$(PLUGIN_FULLNAME)
 		$(STRIP) $(PLUGIN_FULLNAME)
 		$(INSTALL_LIB)
 
+uninstall:
+		$(UNINSTALL_LIB)
+
 clean:
 		rm -f $(OBJS) $(SRCS:%.c=%.d) $(PLUGIN_FULLNAME)
