--- a/lib/dyn_gw_plain/Makefile
+++ b/lib/dyn_gw_plain/Makefile
@@ -52,5 +52,8 @@ install:	$(PLUGIN_FULLNAME)
 		$(STRIP) $(PLUGIN_FULLNAME)
 		$(INSTALL_LIB)
 
+uninstall:
+		$(UNINSTALL_LIB)
+
 clean:
 		rm -f $(OBJS) $(SRCS:%.c=%.d) $(PLUGIN_FULLNAME)
