--- a/lib/quagga/Makefile
+++ b/lib/quagga/Makefile
@@ -62,6 +62,9 @@ install:	$(PLUGIN_FULLNAME)
 		$(STRIP) $(PLUGIN_FULLNAME)
 		$(INSTALL_LIB)
 
+uninstall:
+		$(UNINSTALL_LIB)
+
 clean:
 		rm -f $(OBJS) $(SRCS:%.c=%.d) $(PLUGIN_FULLNAME)
 endif
