build: do not print full commandlines
Make the build less verbose, just print [CC] when compiling
and [LD] when linking.

Signed-off-by: Ferry Huberts <f.huberts@mindef.nl>

--- a/lib/tas/Makefile
+++ b/lib/tas/Makefile
@@ -60,7 +60,8 @@ else
 default_target: $(PLUGIN_FULLNAME)
 
 $(PLUGIN_FULLNAME): $(OBJS) version-script.txt
-		$(CC) $(LDFLAGS) -o $(PLUGIN_FULLNAME) $(OBJS) $(LIBS)
+		@echo "[LD] $@"
+		@$(CC) $(LDFLAGS) -o $(PLUGIN_FULLNAME) $(OBJS) $(LIBS)
 
 # this is not nice but there is no nicer solution
 src/lua/lapi.o src/lua/ltable.o:  CFLAGS += -Wno-cast-qual
