linux-gtk: also remove olsrd-gui on clean
Signed-off-by: Ferry Huberts <ferry.huberts@pelagic.nl>

--- a/gui/linux-gtk/Makefile
+++ b/gui/linux-gtk/Makefile
@@ -12,7 +12,7 @@ olsrd-gui:	$(OBJS)
 	$(CC) $(LFLAGS) -o $@ $(OBJS)
 
 clean:
-	rm -f $(OBJS)
+	rm -f $(OBJS) olsrd-gui
 
 install:
 	mkdir -p ${DESTDIR}/usr/bin
