--- a/make/Makefile.linux
+++ b/make/Makefile.linux
@@ -9,8 +9,8 @@ LIBDIR =	$(DESTDIR)/usr/lib
 SRCS += 	$(wildcard src/linux/*.c src/unix/*.c)
 HDRS +=		$(wildcard src/linux/*.h src/unix/*.h)
 
-CPPFLAGS += 	-Dlinux -DLINUX_NETLINK_ROUTING
-LIBS +=		
+CPPFLAGS += 	-Dlinux -DLINUX_NETLINK_ROUTING -DLINUX_NL80211
+LIBS +=		-lnl
 
 PLUGIN_SONAME ?= lib$(PLUGIN_NAME).so
 PLUGIN_FULLNAME ?= $(PLUGIN_NAME).so.$(PLUGIN_VER)
